tests/error/comptime/check_slice_construction14.bz
// error: invalid memory range for a slice of type '[: int32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different stack objects
// note: begin address points to this stack object
// note: end address points to this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		let j = 0;
		__builtin_slice_from_ptrs(&i, &j);
	});
}
